--- a/web/public/stylesheet/task.css
+++ b/web/public/stylesheet/task.css
@@ -47,7 +47,7 @@
   box-shadow: 0 2px 1px rgba(0,0,0,.04), inset 0 -1px 2px rgba(0,0,0,.05);
 }
 
-.trace {
+.trace, .panel {
   padding: 20px;
   border: 1px solid #cfcfcf;
   border-radius: 4px;
@@ -55,6 +55,10 @@
   background-color: #fbfbfb;
   font-family: "Menlo", "Liberation Mono", "Consolas", "DejaVu Sans Mono", "Ubuntu Mono", "Courier New", "andale mono", "lucida console", monospace;
   box-shadow: 0 2px 1px rgba(0,0,0,.04), inset 0 -1px 2px rgba(0,0,0,.05);
+}
+
+.trace.content-wrapper {
+  margin-bottom: 10px;
 }
 
 .breadcrumb {
@@ -95,6 +99,18 @@
 
 #image-modal .modal-header {
   border: 0;
+}
+
+#charts {
+  margin-bottom: 100px;
+}
+
+#logs div {
+  display: none;
+}
+
+#charts div {
+  display: inline-block;
 }
 
 /* bootstrap affix style */
